--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
+dj-database-url==0.5.0
 Django==4.0
+Pillow==8.4.0
+psycopg2-binary==2.9.2
 python-decouple==3.5
 sqlparse==0.4.2
